# xleapp

./: .coveragerc  .darglint  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  Makefile  README.md  docker-compose.yml  gui_test.py  ileapp.py  ileapp.spec  ileappGUI.py  ileappGUI.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.devcontainer/: DockerFile  devcontainer.json  pipx-install.sh  post-create.sh
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  iLEAPP-BuildPipeline.yaml
Examples/xLEAPP_Reports_2022-10-14_Friday_124842/: Accounts - Account Configuration.html  Accounts - Accounts.html  Address Book - Address Book.html  Alarms - Alarms.html  App Conduit - App Conduit.html  Apple Podcasts - Episodes.html  Apple Podcasts - Shows.html  Apple Wallet - Cards.html  Apple Wallet - Passes.html  Apple Wallet - Tranactions.html  Bluetooth - Bluetooth Other LE.html  Bluetooth - Bluetooth Paired LE.html  Bluetooth - Bluetooth Paired.html  Calendar - Calendar Identity.html  Calendar - Calendar Items.html  Calendar - Calendar List.html  Call History - Call History.html  Cash App - Transactions.html  Celluar Wireless - Celluar Wireless.html  CloudKit - CloudKit Note Sharing.html  CloudKit - Participants.html  Connected to - Connected Devices.html  Core - Build Information.html  DHCP - Hotspot Clients.html  DHCP - Recevied List.html  Discord - Discord Accounts.html  Discord - Discord Manifest.html  Discord - Discord Messages.html  Facebook Messenger - Calls.html  Facebook Messenger - Chats.html  Facebook Messenger - Contacts.html  Facebook Messenger - Conversation Groups.html  Facebook Messenger - Secret Conversations.html  Files App - iCloud Client Items.html  Files App - iCloud Server Items.html  Files App - iCloud Sync Names.html  IOS Build - iOS Device Activator Data.html  IOS Build - iTunes Backup.html  Installed Apps - App Group Listing.html  Installed Apps - App Snapshots (screenshots).html  (+17 more)
Examples/xLEAPP_Reports_2022-10-14_Friday_124842/_KML_Exports/: Google Maps Cache Routes.kml  _latlong.db  iCloud Photos Metadata.kml
Examples/xLEAPP_Reports_2022-10-14_Friday_124842/_TSV Exports/: Account Configuration.tsv  Accounts.tsv  Address Book.tsv  Alarms.tsv  App Conduit.tsv  App Group Listing.tsv  App Snapshots (screenshots).tsv  Apple Maps Group.tsv  Apple Maps Search History.tsv  Application State.tsv  Apps per screen.tsv  Bluetooth Other LE.tsv  Bluetooth Paired LE.tsv  Bluetooth Paired.tsv  Build Information.tsv  Calendar Identity.tsv  Calendar Items.tsv  Calendar List.tsv  Call History.tsv  Calls.tsv  Cards.tsv  Celluar Wireless.tsv  (+30 more)
artifacts/: Artifact.py  __init__.py  accountConfiguration.py  accounts.py  addressBook.py  aggDict.py  aggDictScalars.py  aggDictpasscode.py  aggDictpasscodetype.py  appConduit.py  appGrouplisting.py  appItunesMetadata.py  appSnapshots.py  appleMapsApplication.py  appleMapsGroup.py  appleWifiPlist.py  applewalletTransactions.py  applicationstate.py  bluetooth.py  cacheRoutesGmap.py  calendar.py  callHistory.py  celWireless.py  cloudkitNoteSharing.py  cloudkitParticipants.py  conDev.py  coreDuetAirplane.py  coreDuetLock.py  coreDuetPlugin.py  dataArk.py  dataUsageA.py  dataUsageB.py  dataUsageProcessA.py  dataUsageProcessB.py  deviceActivator.py  dhcphp.py  dhcpl.py  discordAcct.py  discordManifest.py  discordMessages.py  (+55 more)
docs/: rtd-requirements.txt
docs/current/: artifact-creation.md  linux.md  windows.md
docs/source/: api.rst  conf.py  html_report.rst  ileapp.rst  ileappGUI.rst  index.rst  modules.rst  prerequisites.rst  timeline.rst  usage.rst  xleapp.rst
html_report/: __init__.py  artifact_report.py
ileapp/: __init__.py  __main__.py  _authors.py  _version.py  abstract.py  artifacts.py  globals.py  gui.py  ilapglobals.py  ileapp.py
ileapp/artifacts/: Artifact.py  NotificationParams.txt  __init__.py  accountConfiguration.py  accounts.py  addressBook.py  aggDict.py  aggDictScalars.py  aggDictpasscode.py  aggDictpasscodetype.py  appConduit.py  appGrouplisting.py  appItunesMetadata.py  appleMapsApplication.py  appleMapsGroup.py  applewalletTransactions.py  applicationstate.py  callHistory.py  cloudkitParticipants.py  coreDuetAirplane.py  coreDuetLock.py  coreDuetPlugin.py  dataArk.py  dataUsageA.py  dataUsageB.py  dataUsageProcessA.py  deviceActivator.py  dhcphp.py  filesAppsclient.py  filesAppsdb.py  filesAppsm.py  geodApplications.py  geodPDPlaceCache.py  health.py  icloudSharedalbums.py  iconsScreen.py  interactionCcontacts.py  keyboardAppUsage.py  keyboardLexicon.py  kikMessages.py  (+28 more)
ileapp/gui/: __init__.py  funcs.py  gui.py  guiWindow.py
ileapp/helpers/: __init__.py  db.py  decorators.py  ilapfuncs.py  image.py  properities.py  search.py  search_files.py  strings.py  utils.py
ileapp/html_report/: __init__.py  artifact_report.py  chat_rendering.py  index.html  report.py  templating.py  web_icons.py
ileapp/log/: __init__.py  log_confg.yaml  log_config.yaml
ileapp/plugins/: accountConfiguration.py  accounts.py  addressBook.py  aggDict.py  aggDictScalars.py  aggDictpasscode.py  aggDictpasscodetype.py  appConduit.py  appGrouplisting.py  appleWifiPlist.py  geodApplications.py  geodMapTiles.py  geodPDPlaceCache.py  lastBuild.py  voiceRecordings.py
ileapp/report/: ext.py  html.py  templating.py  timeline.py  tsv.py  webicons.py
src/xleapp/: __init__.py  __main__.py  _authors.py  _version.py  abstract.py  app.py  artifacts.py  cli.py  globals.py  gui.py  plugins.py
src/xleapp-old/: __init__.py  _version.py  globals.py  plugins.py
tests/: conftest.py  test_artifact.py  test_artifacts.py  test_cli.py  test_decorators.py  test_descriptors.py  test_filetype.py  test_mime_types.py
tests-old/: conftest.py  test_application.py  test_cli.py
tests/data_filetypes/: file_example_HTML.htm  file_example_JSON_1kb.json  file_example_TIFF_1MB.htm  file_example_XML_24kb.xml  file_types_lookup.json
tests/helpers/: test_strings.py
tests/utils/: generate_file_types_lookups.py  utils.py
tools/: search_files.py
(+312 files in other folders)
